Sponsors alignment fix

--- a/public/css/_mq.scss
+++ b/public/css/_mq.scss
@@ -176,6 +176,9 @@
   .sponsor-title {
     font-weight: 500;
   }
+  .sponsor-title {
+    font-size: 17px;
+  }
   .session-time,
   .workshop-time {
     font-weight: 500;
@@ -295,6 +298,7 @@
   }
   .monty {
     clear: both;
+    font-size: 0;
   }
 
   .session-speaker-img {
